# streamingACD

./: .gitattributes  .gitignore  README.md  pyproject.toml
data/: desktop.ini
docs/: paper_claim_reproduction_matrix.md  reproducibility_status.md
prompts/: checkworthiness_v4_prompts.md
psr/: README.md  filipe_psr_virality_handoff_2026-05-18.zip.sha256  reproduce_missing_psr_predictions.py  virality_split_manifest_2026-05-12.json
reproducibility/: README.md  artifact_checksums_2026-05-11.json  artifact_checksums_2026-05-11.md
reproducibility/source_artifacts/claim_normalization/source_code/: README.md  pyproject.toml
reproducibility/source_artifacts/claim_normalization/source_code/prompts/: claim_normalization.yaml  claim_normalization_deepseek.yaml
reproducibility/source_artifacts/claim_normalization/source_code/scripts/: finetune_claim_normalizer.py  run_claim_normalization_ct25.py  tune_fewshot_hyperparams.py
reproducibility/source_artifacts/claim_normalization/source_code/src/checkworthiness/: config.py
reproducibility/source_artifacts/claim_normalization/source_code/src/pipeline/modules/: clusterer.py  embedder.py
results/: anomaly_baseline_paper_fix_2026-05-14.md  anomaly_baseline_rerun_min_rows89_2026-05-13.json  anomaly_baseline_rerun_min_rows89_2026-05-13.md  anomaly_expose_min_rows_fine_2026-05-13.json  anomaly_expose_min_rows_sensitivity_2026-05-13.json  anomaly_expose_reproduction_attempt_2026-05-13.md  anomaly_expose_single_rerun_2026-05-13.json  claim_normalization_filipe_request_2026-05-14.md  claim_normalization_handoff_2026-05-14.md  clustering_subset_language_share_2026-05-14.json  corpus_language_share_2026-05-12.json  (+21 more)
(+162 files in other folders)
