[project]
name = "streamingacd-llm-ablation"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "python-dotenv>=1.0.0",
    "polars>=1.0.0",
    "pyarrow>=17.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.14.0",
    "torch>=2.4.0",
    "transformers>=4.45.0",
    "tqdm>=4.66.0",
    "json-repair>=0.30.0",
    "tenacity>=9.0.0",
    "statsmodels>=0.14.0",
    "sentencepiece>=0.2.0",
]
