[project]
name = "claim-normalization"
version = "1.0.0"
description = "Retrieval-Augmented Few-Shot Claim Normalization for CheckThat! 2025 Task 2"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    # LLM APIs
    "openai>=1.0.0",
    "together>=1.0.0",

    # ML & Embeddings
    "sentence-transformers>=5.2.0",
    "scikit-learn>=1.8.0",
    "transformers>=4.57.3",
    "accelerate>=1.12.0",
    "datasets>=4.4.2",

    # Data processing
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "numpy<2",

    # Evaluation
    "nltk>=3.9.2",

    # Retrieval
    "rank-bm25>=0.2.2",

    # Utilities
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.2.1",
    "tqdm>=4.66.0",
    "json-repair>=0.54.3",
]

[project.optional-dependencies]
finetune = [
    "peft>=0.10.0",
    "bitsandbytes>=0.43.0",
    "sentencepiece>=0.2.1",
]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
